--- a/css/RichText.less
+++ b/css/RichText.less
@@ -16,11 +16,11 @@
 	/* -webkit-appearance: caret;*/
 }
 
-.onyx-input-decorator.onyx-focused > .onyx-richtext {
+.onyx-input-decorator.enyo-focused > .onyx-richtext {
 	cursor: text;
 }
 
-.onyx-input-decorator.onyx-disabled > .onyx-richtext {
+.onyx-input-decorator.enyo-disabled > .onyx-richtext {
 	cursor: default;
 }
 
