--- a/css/Slider.less
+++ b/css/Slider.less
@@ -4,14 +4,14 @@
 	margin: 8px 20px;
 }
 
-.onyx-slider-taparea {
+.onyx-slider > .enyo-slider-taparea {
 	position: absolute;
 	top: -11px;
 	height: 28px;
 	width: 100%;
 }
 
-.onyx-slider-knob {
+.onyx-slider > .enyo-slider-knob {
 	position: relative;
 	height: @onyx-slider-knob-image-height;
 	width: @onyx-slider-knob-image-width;
@@ -19,6 +19,6 @@
 	margin: -23px -20px;
 }
 
-.onyx-slider-knob.active, .onyx-slider-knob.pressed {
+.onyx-slider > .enyo-slider-knob.active, .onyx-slider > .enyo-slider-knob.pressed {
 	background-position: 0 -40px;
 }
