--- a/css/Toolbar.less
+++ b/css/Toolbar.less
@@ -50,7 +50,7 @@
 	padding: 0px 6px 5px 6px;
 }
 
-.onyx-toolbar .onyx-input-decorator.onyx-focused {
+.onyx-toolbar .onyx-input-decorator.enyo-focused {
 	box-shadow: inset 0px 1px 4px rgba(0,0,0,0.3);
 	background-color: @onyx-toolbar-input-focused-background;
 }
