--- a/css/onyx.css
+++ b/css/onyx.css
@@ -39,7 +39,6 @@
   cursor: default;
   background-color: #eaeaea;
   /* remove automatic tap highlight color */
-
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 /* prevent IE from inheriting line-height for these elements */
@@ -74,16 +73,18 @@
 /* Button.css */
 .onyx-button {
   outline: 0;
+  /**/
   color: #292929;
   font-size: 16px;
   text-align: center;
   white-space: nowrap;
+  /**/
   margin: 0;
   padding: 6px 18px;
   overflow: hidden;
+  /**/
   border-radius: 3px;
   /* for IE8 */
-
   border: 1px solid #707070;
   border: 1px solid rgba(15, 15, 15, 0.2);
   /*
@@ -93,22 +94,18 @@
 		We can fix it by using the darker bottom border below, but
 		then there are a few rogue pixels that end up very dark.
 	*/
-
   /* border-bottom: 1px solid rgba(15, 15, 15, 0.5); */
-
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+  /**/
   background: #e1e1e1 url("../images/gradient.png") repeat-x bottom;
   background-size: contain;
   /**/
-
   text-overflow: ellipsis;
   /* the following cause arcane problems on IE */
-
   /*
 	min-width: 14px;
 	min-height: 20px;
 	*/
-
 }
 /*
 	IE8 can't handle these selectors in tandem:
@@ -141,10 +138,8 @@
   width: 32px;
   background: url("../images/checkbox.png") no-repeat;
   /* reset for ? */
-
   margin: 0px;
   /* these entries cause toggle-button and checkbox to line up properly*/
-
   display: inline-block;
   vertical-align: middle;
 }
@@ -177,14 +172,11 @@
 .onyx-groupbox > * {
   display: block;
   /*box-shadow: inset 0px 1px 1px rgba(255,255,255,0.5);*/
-
   border-color: #aaaaaa;
   border-style: solid;
   border-width: 0 1px 1px 1px;
   /*padding: 10px;*/
-
   /* reset styles that make 'item' look bad if they happen to be there */
-
   border-radius: 0;
   margin: 0;
   font-size: 16px;
@@ -206,12 +198,12 @@
 }
 .onyx-groupbox-header {
   padding: 2px 10px;
+  /**/
   color: #ffffff;
   font-size: 14px;
   font-weight: bold;
   text-transform: uppercase;
   /**/
-
   background-color: #4c4c4c;
   border: none;
   background: #4c4c4c url("../images/gradient.png") repeat-x 0 10px;
@@ -249,15 +241,12 @@
 }
 .onyx-input-decorator.onyx-disabled {
   /* FIXME: needed to color a disabled input placeholder. */
-
   /*-webkit-text-fill-color: #888;*/
-
   opacity: 0.4;
   filter: alpha(opacity=40);
 }
 .onyx-input-decorator > input {
   /* reset */
-
   margin: 0;
   padding: 0;
   border: none;
@@ -268,9 +257,7 @@
   font-size: 16px;
   box-shadow: none;
   /* FIXME: hack for styling reset on Android */
-
   /* -webkit-appearance: caret;*/
-
 }
 .onyx-input-decorator.onyx-focused > input {
   cursor: text;
@@ -386,7 +373,6 @@
 /* TextArea.css */
 .onyx-input-decorator > textarea {
   /* reset */
-
   margin: 0;
   padding: 0;
   border: none;
@@ -397,13 +383,10 @@
   font-size: 16px;
   box-shadow: none;
   /* Remove scrollbars and resize handle */
-
   resize: none;
   overflow: auto;
   /* FIXME: hack for styling reset on Android */
-
   /* -webkit-appearance: caret;*/
-
 }
 .onyx-input-decorator.onyx-focused > textarea {
   cursor: text;
@@ -413,13 +396,11 @@
 }
 .onyx-textarea {
   /* need >=50px for scrollbar to be usable on mac */
-
   min-height: 50px;
 }
 /* RichText.css */
 .onyx-input-decorator > .onyx-richtext {
   /* reset */
-
   margin: 0;
   padding: 0;
   border: none;
@@ -432,9 +413,7 @@
   min-width: 100px;
   box-shadow: none;
   /* FIXME: hack for styling reset on Android */
-
   /* -webkit-appearance: caret;*/
-
 }
 .onyx-input-decorator.onyx-focused > .onyx-richtext {
   cursor: text;
@@ -447,18 +426,16 @@
   padding: 8px 12px;
   margin: 0;
   outline: 0;
+  /**/
   font-size: 16px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   text-align: center;
   /**/
-
   background: #e7e7e7 url("../images/gradient.png") repeat-x bottom;
   /* IE8 */
-
   border: 1px solid #333333;
   border: 1px solid rgba(15, 15, 15, 0.2);
   /* turn off right-border in a way IE8 ignores, because IE8 does not support :last-child */
-
   border-right-color: rgba(0, 0, 0, 0);
   box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.2);
 }
@@ -468,7 +445,6 @@
 .onyx-radiobutton:last-child {
   border-radius: 0px 3px 3px 0px;
   /* IE8 */
-
   border-right: 1px solid #333333;
   border-right: 1px solid rgba(15, 15, 15, 0.2);
 }
@@ -477,27 +453,6 @@
   background: #0091f2 url("../images/gradient-invert.png") repeat-x top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 1px 2px 2px rgba(0, 0, 0, 0.2);
-}
-/* Scrim.css */
-.onyx-scrim {
-  z-index: 1;
-  /*
-		note: by using pointer-events we allow tapping on scrim
-		while it is fading out; however, this requires any showing classes
-		to set pointer events to auto or scrim will not function as expected.
-	*/
-
-  pointer-events: none;
-}
-.onyx-scrim.onyx-scrim-translucent {
-  pointer-events: auto;
-  background-color: #000000;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-}
-.onyx-scrim.onyx-scrim-transparent {
-  pointer-events: auto;
-  background: transparent;
 }
 /* TabButton.css */
 .onyx-radiobutton.onyx-tabbutton {
@@ -571,71 +526,50 @@
   position: absolute;
   background: linear-gradient(to right, #b1b1b1 0%, rgba(177, 177, 177, 0) 100%);
   /* W3C */
-
   background: -moz-linear-gradient(right, #b1b1b1 0%, rgba(177, 177, 177, 0) 100%);
   /* FF3.6+ */
-
   background: -webkit-linear-gradient(left, rgba(177, 177, 177, 0), #b1b1b1);
   /* Chrome10+,Safari5.1+ */
-
   background: -webkit-gradient(linear, right top, left top, color-stop(0%, #b1b1b1), color-stop(100%, rgba(177, 177, 177, 0)));
   /* Chrome,Safari4+ */
-
   background: -o-linear-gradient(left, #b1b1b1 0%, rgba(177, 177, 177, 0) 100%);
   /* Opera 11.10+ */
-
   background: -ms-linear-gradient(left, rgba(177, 177, 177, 0) 0%, #b1b1b1 100%);
   /* IE10+ */
-
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00b1b1b1, endColorstr=#ffb1b1b1, GradientType=1);
   /* IE6-9 */
-
 }
 .onyx-tab-item-dissolve.active {
   background: linear-gradient(to right, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
   /* W3C */
-
   background: -moz-linear-gradient(right, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
   /* FF3.6+ */
-
   background: -webkit-linear-gradient(left, rgba(202, 202, 202, 0), #cacaca);
   /* Chrome10+,Safari5.1+ */
-
   background: -webkit-gradient(linear, right top, left top, color-stop(0%, #cacaca), color-stop(100%, rgba(202, 202, 202, 0)));
   /* Chrome,Safari4+ */
-
   background: -o-linear-gradient(left, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
   /* Opera 11.10+ */
-
   background: -ms-linear-gradient(left, rgba(202, 202, 202, 0) 0%, #cacaca 100%);
   /* IE10+ */
-
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00cacaca, endColorstr=#ffcacaca, GradientType=1);
   /* IE6-9 */
-
 }
 .onyx-tab-item-hovered {
   background: linear-gradient(to right, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
   /* W3C */
-
   background: -moz-linear-gradient(right, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
   /* FF3.6+ */
-
   background: -webkit-linear-gradient(left, rgba(202, 202, 202, 0), #cacaca);
   /* Chrome10+,Safari5.1+ */
-
   background: -webkit-gradient(linear, right top, left top, color-stop(0%, #cacaca), color-stop(100%, rgba(202, 202, 202, 0)));
   /* Chrome,Safari4+ */
-
   background: -o-linear-gradient(left, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
   /* Opera 11.10+ */
-
   background: -ms-linear-gradient(left, rgba(202, 202, 202, 0) 0%, #cacaca 100%);
   /* IE10+ */
-
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00cacaca, endColorstr=#ffcacaca, GradientType=1);
   /* IE6-9 */
-
 }
 .onyx-tab-item-close {
   display: inline-block;
@@ -658,13 +592,11 @@
   vertical-align: middle;
   text-align: center;
   /* */
-
   border-radius: 3px;
   box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.4);
   background: #8bba3d url("../images/gradient-invert.png") repeat-x bottom;
   background-size: auto 100%;
   /* label */
-
   color: #ffffff;
   font-size: 14px;
   font-weight: bold;
@@ -716,14 +648,13 @@
 		elements along a common centerline and use
 		padding to fill out the space.
 	*/
-
   padding: 9px 8px 10px 8px;
+  /**/
   border: 1px solid #3A3A3A;
   background: #4c4c4c url("../images/gradient.png") repeat-x 0 bottom;
   background-size: contain;
   color: #ffffff;
   /**/
-
   white-space: nowrap;
   overflow-y: visible;
   font-size: 20px;
