ENYO-1863: Onyx 2.6.0 CSS images have incorrect relative URIs

--- a/css/onyx-variables.less
+++ b/css/onyx-variables.less
@@ -1,7 +1,7 @@
 /* Paths */
 /* application importing Onyx Less files will have to override this  */
 /* variable. Otherwise, Onyx image load will fail with a 404 error  */
-@onyx-image-path: '../images';
+@onyx-image-path: 'onyx/images';
 
 
 /* Fonts */
