ENYO-2979: Fix incorrect image paths.
Enyo-DCO-1.1-Signed-off-by: Aaron Tam <aaron.tam@lge.com>

--- a/css/onyx-variables.less
+++ b/css/onyx-variables.less
@@ -142,3 +142,6 @@
 @onyx-spinner-light-image: url("@{onyx-image-path}/spinner-light.gif");
 @onyx-spinner-image-width: 59px;
 @onyx-spinner-image-height: 58px;
+
+@onyx-close-inactive-image: url("@{onyx-image-path}/close-inactive.png");
+@onyx-close-active-image: url("@{onyx-image-path}/close-active.png");
