ENYO-3056: Add background image scaling for basic RI in Onyx

--- a/src/Checkbox/Checkbox.less
+++ b/src/Checkbox/Checkbox.less
@@ -4,6 +4,7 @@
 	height: @onyx-checkbox-image-height;
 	width: @onyx-checkbox-image-width;
 	background: @onyx-checkbox-image no-repeat;
+	background-size: 100% auto;
 	/* reset for ? */
 	margin: 0px;
 	/* these entries cause toggle-button and checkbox to line up properly*/
