--- a/src/Spinner/Spinner.less
+++ b/src/Spinner/Spinner.less
@@ -4,8 +4,10 @@
 	height: @onyx-spinner-image-height;
 	display: inline-block;
 	background: @onyx-spinner-dark-image no-repeat 0 0;
+	background-size: 100% auto;
 }
 
 .onyx-spinner.onyx-light {
 	background: @onyx-spinner-light-image no-repeat 0 0;
+	background-size: 100% auto;
 }
