--- a/src/TabBarItem/TabBarItem.less
+++ b/src/TabBarItem/TabBarItem.less
@@ -78,6 +78,7 @@
 	vertical-align: middle;
 	background-repeat: no-repeat;
 	background-image: @onyx-close-inactive-image;
+	background-size: 100% auto;
 	&:hover {
 		background-image: @onyx-close-active-image;
 	}
