--- a/src/Grabber/Grabber.less
+++ b/src/Grabber/Grabber.less
@@ -1,6 +1,7 @@
 /* Grabber.css */
 .onyx-grabber {
 	background: @onyx-grabber-image no-repeat center;
+	background-size: 100% auto;
 	width: @onyx-grabber-image-width;
 	height: @onyx-grabber-image-height;
 }
