--- a/src/Icon/Icon.less
+++ b/src/Icon/Icon.less
@@ -5,6 +5,7 @@
 	background-repeat: no-repeat;
 	display: inline-block;
 	vertical-align: middle;
+	background-size: 100% auto;
 }
 
 .onyx-icon.onyx-icon-button.active, .onyx-icon.onyx-icon-button.pressed, .onyx-icon-toggle.active {
