--- a/src/Slider/Slider.less
+++ b/src/Slider/Slider.less
@@ -16,6 +16,7 @@
 	height: @onyx-slider-knob-image-height;
 	width: @onyx-slider-knob-image-width;
 	background: @onyx-slider-knob-image left top no-repeat;
+	background-size: 100% auto;
 	margin: -23px -20px;
 }
 
