--- a/src/Spinner/Spinner.less
+++ b/src/Spinner/Spinner.less
@@ -4,10 +4,11 @@
 	height: @onyx-spinner-image-height;
 	display: inline-block;
 	background: @onyx-spinner-dark-image no-repeat 0 0;
-	background-size: 100% auto;
+	// The spinner is actually slightly smaller than its container. This keeps it centered.
+	background-size: 54px 55px;
 }
 
 .onyx-spinner.onyx-light {
 	background: @onyx-spinner-light-image no-repeat 0 0;
-	background-size: 100% auto;
+	background-size: 54px 55px;
 }
